--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -37,6 +37,7 @@
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container" id="titleContainer">
 				<h1 id="title">About</h1>
+				<a id="subtitle" href="index.html">STANLEY J KIM</a>
 			</div>
 		</div>
 		
@@ -63,36 +64,151 @@
 			</div>
 		</nav>
 		
-		<div class="spacer"></div>
-		
 		<!-- ABOUT -->
-		<div id="aboutMe" class="section row">
-			<div class="aboutMeContainer" class="col s12 m5 l5">
+		<div class="aboutMeContainer container-fluid">
+			<img class="col-md-6" id="stanley1" src="images/headshot.jpg"/>
+			<div class="col-md-6" id="aboutMeText" class="textBlock">
 				<h2 class="sectionTitle">HI, I'M STANLEY</h2>
-				<p>I am a 3rd year at the University of Southern California studying Computer Science/Business 
+				<p style="color:white;">I am a 3rd year at the University of Southern California studying Computer Science/Business 
 				Administration. I have been programming for just over 2 years now, and in that time I've found 
 				that I'm incredibly passionate about creating and innovating through the development of 
 				efficient software technologies.</p>
-				<img id="stanley1" class="materialboxed" data-caption="Watching the Trojans take another win. Fight on!" src="images/stanley1.jpg"/>
 			</div>
 		</div>
 		
-		<div class="divider"></div>
-		
-		<div id="aboutMe" class="section row">
-			<div class="col s12 m5 l5">
-				<img id="stanley2" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
+		<div id="cardsContainer">
+			<img class="col-sm-4 col-md-6" id="img1" src="images/hacktech2018.jpg" />
+			
+			<div class="col-sm-4 col-md-6" id="img2" class="imgWrap">
+				<img class="innerImg" src="images/eagle.jpg" />
+				<p class="description">This image looks super neat.</p>
 			</div>
-			<div class="aboutMeContainer" class="col s12 m5 l5">
+			
+			<div class="col-sm-4 col-md-6" id="img3" class="imgWrap">
+				<img class="innerImg" src="images/stanley2a.jpg" />
+				<p class="description">This image looks super neat.</p>
+			</div>
+			
+			<img class="col-sm-4 col-md-6" id="img4" class="innerImg" src="images/stanley1a.jpg" />
+			
+			<!-- <div id="card1" class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flipper">
+					<div class="front1">
+						<img src="images/hacktech2018.jpg">
+					</div>
+					<div class="back">
+						<h2 class="sectionTitle">INTERESTS</h2>
+						<p style="color:white;">When I am not programming, I enjoy spending my time becoming more involved with my community. 
+						At USC, I am a brother and the Website Chair of the Kappa Sigma Fraternity's Delta Eta chapter and 
+						a member of ACM<sup>2</sup>--the Association of Computing Machinery's premier leadership program. 
+						In addition, I earned my Eagle Scout rank as a Boy Scout of America on November 20<sup>th</sup> of 
+						2015. Some of my passions include traveling, attending concerts with my close friends, and in the 
+						wintertime, snowboarding!</p>
+						<img id="stanley3" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
+					</div>
+				</div>
+			</div>
+			
+			<div id="card2" class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flipper">
+					<div class="front2">
+						<img src="images/eagle.jpg">
+					</div>
+					<div class="back">
+						<h2 class="sectionTitle">INTERESTS</h2>
+						<p style="color:white;">When I am not programming, I enjoy spending my time becoming more involved with my community. 
+						At USC, I am a brother and the Website Chair of the Kappa Sigma Fraternity's Delta Eta chapter and 
+						a member of ACM<sup>2</sup>--the Association of Computing Machinery's premier leadership program. 
+						In addition, I earned my Eagle Scout rank as a Boy Scout of America on November 20<sup>th</sup> of 
+						2015. Some of my passions include traveling, attending concerts with my close friends, and in the 
+						wintertime, snowboarding!</p>
+						<img id="stanley3" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
+					</div>
+				</div>
+			</div>
+			
+			<div id="card3" class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flipper">
+					<div class="front3">
+						<img src="images/stanley2a.jpg">
+					</div>
+					<div class="back">
+						<h2 class="sectionTitle">INTERESTS</h2>
+						<p style="color:white;">When I am not programming, I enjoy spending my time becoming more involved with my community. 
+						At USC, I am a brother and the Website Chair of the Kappa Sigma Fraternity's Delta Eta chapter and 
+						a member of ACM<sup>2</sup>--the Association of Computing Machinery's premier leadership program. 
+						In addition, I earned my Eagle Scout rank as a Boy Scout of America on November 20<sup>th</sup> of 
+						2015. Some of my passions include traveling, attending concerts with my close friends, and in the 
+						wintertime, snowboarding!</p>
+						<img id="stanley3" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
+					</div>
+				</div>
+			</div>
+			
+			<div id="card4" class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flipper">
+					<div class="front4">
+						<img src="images/stanley1a.jpg">
+					</div>
+					<div class="back">
+						<h2 class="sectionTitle">INTERESTS</h2>
+						<p style="color:white;">When I am not programming, I enjoy spending my time becoming more involved with my community. 
+						At USC, I am a brother and the Website Chair of the Kappa Sigma Fraternity's Delta Eta chapter and 
+						a member of ACM<sup>2</sup>--the Association of Computing Machinery's premier leadership program. 
+						In addition, I earned my Eagle Scout rank as a Boy Scout of America on November 20<sup>th</sup> of 
+						2015. Some of my passions include traveling, attending concerts with my close friends, and in the 
+						wintertime, snowboarding!</p>
+						<img id="stanley3" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
+					</div>
+				</div>
+			</div> -->
+		</div>
+		
+		
+		<!-- <div id="carouselContainer">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100 h-100" src="images/stanley1.jpg" alt="Watching the Trojans take another win!">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100 h-100" src="images/hacktech2018.jpg" alt="Hacktech 2018">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100 h-100" src="images/stanley2.jpg" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>...</h5>
+							<p>...</p>
+						</div>
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div> -->
+		
+		<!-- <div class="aboutMeContainer">
+			<div class="textBlock">
 				<h2 class="sectionTitle">INTERESTS</h2>
-				<p>When I am not programming, I enjoy spending my time becoming more involved with my community. 
+				<p style="color:white;">When I am not programming, I enjoy spending my time becoming more involved with my community. 
 				At USC, I am a brother and the Website Chair of the Kappa Sigma Fraternity's Delta Eta chapter and 
 				a member of ACM<sup>2</sup>--the Association of Computing Machinery's premier leadership program. 
 				In addition, I earned my Eagle Scout rank as a Boy Scout of America on November 20<sup>th</sup> of 
 				2015. Some of my passions include traveling, attending concerts with my close friends, and in the 
 				wintertime, snowboarding!</p>
+				<img id="stanley3" class="materialboxed" data-caption="Snowboarding with close friends at Mountain High!" src="images/stanley2.jpg"/>
 			</div>
-		</div>
-		<div class="divider"></div>
+		</div> -->
 	</body>
 </html>
