--- a/WebContent/projects.html
+++ b/WebContent/projects.html
@@ -4,70 +4,69 @@
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112810626-1"></script>
 		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		
-		  gtag('config', 'UA-112810626-1');
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			
+			gtag('config', 'UA-112810626-1');
+			$( document ).ready(function() {
+				$(".button-collapse").sideNav();
+			});
 		</script>
 		<meta charset="UTF-8">
 		<title>Stanley J. Kim</title>
 		<!--Import Google Icon Font-->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!--Import materialize.css-->
-		<link rel="stylesheet" type="text/css" href="css/materialize.min.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="css/materialize.min.css"/> -->
+		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css" />
 		<link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="css/home.css">
+		<link rel="stylesheet" type="text/css" href="css/projects.css">
 		
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="icon" href="images/faviconTransparent.ico">
-		<!-- <script>
-			$(document).ready(function(){
-			    $('.materialboxed').materialbox();
-			});
-		</script> -->
     </head>
     <body>
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="js/materialize.min.js"></script>
-		<div id="header" class="valign-wrapper">
-			<img id="headshot" class="circle" src="images/headshot.jpg" alt="headshot.jpeg"/>
-			<h1 id="name">STANLEY J KIM</h1>
-			<div id="contactInfoButton" class="fixed-action-btn horizontal">
-				<a class="btn-floating btn-large">
-					<i style="background-color:#ff6d7f" class="large material-icons">contact_mail</i>
-				</a>
-				<ul>
-					<!-- <li><a class="btn-floating red"><i class="material-icons">call</i></a></li> -->
-					<li><a class="btn-floating yellow darken-1" href="mailto:stanleyjkim@gmail.com" target="_top"><i class="material-icons">email</i></a></li>
-					<li><a class="btn-floating green" href="https://github.com/stanlejk" target="_blank"><i class="mdi mdi-github-circle"></i></a></li>
-					<li><a class="btn-floating blue" href="https://www.linkedin.com/in/stanleyjkim/" target="_blank"><i class="mdi mdi-linkedin-box"></i></a></li>
-				</ul>
+		<!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
+		
+		<!-- TOP JUMBOTRON -->
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container" id="titleContainer">
+				<h1 id="title">PROJECTS</h1>
+				<a id="subtitle" href="index.html">STANLEY J KIM</a>
 			</div>
 		</div>
 		
 		<!-- NAVIGATION BAR -->
-		
-		<nav id="navBar">
-			<div class="nav-wrapper">
-				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li><a id="navLink" class="hoverable" href="index.html">ABOUT</a></li>
-					<li><a id="clickedLink">PROJECTS</a></li>
-					<li><a id="navLink" class="hoverable" href="experience.html">EXPERIENCE</a></li>
-					<li><a id="navLink" class="hoverable" href="https://drive.google.com/file/d/0B0ecwHzZdN2QM1VNNlNnZVY0aXc/view?usp=sharing" target="_blank">CV</a></li>
+		<nav class="nav navbar navbar-expand-lg">
+			<div class="collapse navbar-collapse" id="navitemContainer">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a id="navLink" href="index.html">HOME</a>
+					</li>
+					<li class="nav-item">
+						<a id="navLink" href="about.html">ABOUT</a>
+					</li>
+					<li class="nav-item">
+						<a id="navLink" style="color: #ff6d7f;" class="activeLink">PROJECTS</a>
+					</li>
+					<li class="nav-item">
+						<a id="navLink" href="experience.html">EXPERIENCE</a>
+					</li>
+					<li class="nav-item">
+						<a id="navLink" href="https://drive.google.com/file/d/0B0ecwHzZdN2QM1VNNlNnZVY0aXc/view?usp=sharing" target="_blank">CV</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
 		
+		<div class="spacer"></div>
+		
 		<!-- PROJECTS -->
-		
-		<div id="title" class="section">
-			<h1 id="titleText">PROJECTS</h1>
-		</div>
-		
 		<div id="projects" class="section valign-wrapper">
 			<div class="cardContainer">
 				<a href="scheduler.html" class="projectImage">
